--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <section class="profile-section">
         <div class="container container-custom">
           <div>
-            <img src="./img/profile.webp" alt="Фото разработчика" class="profile-img rounded-circle">
-            <h1 class="mb-4">Иван Иванов</h1>
+            <img src="./img/фото_Стас.jpg" alt="Фото разработчика" class="profile-img rounded-circle">
+            <h1 class="mb-4">Селянский Станислав</h1>
           </div>
             <div class="profile-info">
                 <ul>
-                    <li><strong>Возраст:</strong> 28 лет</li>
+                    <li><strong>Возраст:</strong> 18 лет</li>
                     <li><strong>Специализация:</strong> Frontend разработчик</li>
                     <li><strong>Опыт работы:</strong> 0 лет</li>
                     <li><strong>Описание:</strong> Создаю современные, адаптивные и интерактивные веб-приложения с использованием современных технологий. Уделяю внимание деталям и качеству кода.</li>
-                    <li><strong>Контакты:</strong> example@mail.ru | +7 (999) 123-45-67</li>
+                    <li><strong>Контакты:</strong> stasik.yznik@mail.ru | +7 (968) 971-97-41</li>
                 </ul>
             </div>
         </div>
@@ -98,14 +98,14 @@
                 <!-- Элементы работ - можно добавлять новые -->
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item">
                     <div class="portfolio-card">
-                        <img src="./projects/task1-cssgrid/img/bg.jfif" class="card-img-top portfolio-img" alt="Работа 1">
+                        <img src="./projects/task1-cssgrid-stanislavselyasnkii/img/bg.jfif" class="card-img-top portfolio-img" alt="Работа 1">
                         <div class="card-body">
                           <div>
                             <h5 class="card-title">Первая работа с гридами</h5>
                             <p class="card-text">В этой работе я впервые работал с гитхабом, нашей задачей было написать CSS код под образцу и создать адаптивные сетки на основе CSS Grid.</p>
                           </div>
                             <div class="portfolio-links">
-                                <a href="./projects/task1-cssgrid/index.html" class="portfolio-links_demo"><i class="fa-solid fa-globe"></i> Демонстрация</a>
+                                <a href="./projects/task1-cssgrid-stanislavselyasnkii/example.html" class="portfolio-links_demo"><i class="fa-solid fa-globe"></i> Демонстрация</a>
                                 <a href="#" class="portfolio-links_repo"><i class="fa-brands fa-square-github"></i> Репозиторий</a>
                             </div>
                         </div>
@@ -113,14 +113,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item">
                     <div class="portfolio-card">
-                        <img src="https://placehold.co/400x200" class="card-img-top portfolio-img" alt="Работа 2">
+                        <img src="./projects/task2-kefteme/img/about-logo.png" class="card-img-top portfolio-img" alt="Работа 2">
                         <div class="card-body">
                           <div>
                             <h5 class="card-title">Интернет-магазин</h5>
                             <p class="card-text">Полнофункциональный интернет-магазин с корзиной, фильтрами и системой оплаты.</p>
                           </div>
                             <div class="portfolio-links">
-                                <a href="#" class="portfolio-links_demo"><i class="fa-solid fa-globe"></i> Демонстрация</a>
+                                <a href="./projects/task2-kefteme/index.html" class="portfolio-links_demo"><i class="fa-solid fa-globe"></i> Демонстрация</a>
                                 <a href="#" class="portfolio-links_repo"><i class="fa-brands fa-square-github"></i> Репозиторий</a>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                 <a href="#"><i class="fab fa-telegram"></i></a>
                 <a href="#"><i class="fab fa-vk"></i></a>
             </div>
-            <p>© 2025 Портфолио Веб-Разработчика. Все права защищены (ага, ну-ну))).</p>
+            <p>© 2025 Портфолио Веб-Разработчика. Все права защищены (ага, охранной лоутаба))).</p>
         </div>
     </footer>
 
