--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><strong>Возраст:</strong> 18 лет</li>
                     <li><strong>Специализация:</strong> Frontend разработчик</li>
-                    <li><strong>Опыт работы:</strong> 0 лет</li>
+                    <li><strong>Опыт работы:</strong> 2 года</li>
                     <li><strong>Описание:</strong> Создаю современные, адаптивные и интерактивные веб-приложения с использованием современных технологий. Уделяю внимание деталям и качеству кода.</li>
                     <li><strong>Контакты:</strong> stasik.yznik@mail.ru | +7 (968) 971-97-41</li>
                 </ul>
@@ -150,8 +150,8 @@
     <footer>
         <div class="container container-custom">
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="github.com/stanislavselyasnkii"><i class="fab fa-github"></i></a>
+                <a href="t.me/dgnr_t"><i class="fab fa-telegram"></i></a>
                 <a href="#"><i class="fab fa-vk"></i></a>
             </div>
             <p>© 2025 Портфолио Веб-Разработчика. Все права защищены (ага, охранной лоутаба))).</p>
